# WhatsFlow

./: .replit  DEPLOYMENT_GUIDE.md  DOCUMENTATION.md  MIT License  README.md  SETUP_INSTRUCTIONS.md  app.py  main.py  pyproject.toml  replit.md  requirements.txt  requirements_for_local.txt
attached_assets/: App_1754316010778.jsx  main_1754316010782.jsx
instance/: whatsapp_bulk.db
static/css/: whatsapp-theme.css
static/js/: dashboard.js  file-upload.js  progress-tracker.js  whatsapp.js
templates/: analytics.html  base.html  campaigns.html  customers.html  dashboard.html  progress.html  settings.html  whatsapp.html
uploads/: .gitkeep
whatsapp_sender/: __init__.py  config.py  sender.py  xpath.py
