[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-cors>=6.0.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "psycopg2-binary>=2.9.10",
    "selenium>=4.34.2",
    "pandas>=2.3.1",
    "webdriver-manager>=4.0.2",
    "xlrd>=2.0.2",
    "pillow>=11.3.0",
    "werkzeug>=3.1.3",
    "flask-migrate>=4.1.0",
]
